<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="night_theme">Тёмная тема</string>

    <string name="share_app_message">Присоединяйтесь к курсу по Андроид-разработке в Практикуме: %s</string>
    <string name="share_app_url">https://practicum.yandex.ru/android</string>

    <string name="support_email">your-email@example.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="terms_of_service_url">https://yandex.ru/legal/practicum_offer</string>

    <string name="search_hint">Поиск</string>
    <string name="clear_button_description">Очистить поисковый запрос</string>
    <string name="no_results">Нет результатов</string>
    <string name="clear_search" >Очистить поиск</string>
    <string name="clear" >Очистить</string>

    <string name="search_header">Поиск</string>"Поиск"/>

    <string name="place_holder">Нет данных</string>
    <string name="placeholder_search_text">Введите запрос для поиска треков</string>

    <string name="artist_name_track_time" formatted="false">%s • %s</string>

    <string name="no_internet_connection">Нет подключения к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload_button">Обновить</string>

    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    

    <string name="mediateka_title">Медиатека</string>
    <string name="back">Назад</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="mediateka_empty">Ваша медиатека пуста</string>
    <string name="playlist_not_yet_created">Вы не создали ни одного плейлиста</string>

    <string name="add_to_favorite">Добавлено в избранное</string>
    <string name="remove_from_favorite">Удалено из избранного</string>
    
    <string name="create_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_cover">Обложка</string>
    <string name="create">Создать</string>
    <string name="finish_playlist_creation">Завершить создание плейлиста?</string>
    <string name="unsaved_data_warning">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <plurals name="playlist_track_count">
        <item quantity="zero">0 треков</item>
        <item quantity="one">1 трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="share_playlist">Поделиться</string>
    <string name="menu">Меню</string>
    <string name="delete_track_question">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_question">Хотите удалить плейлист?</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
</resources>