<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/libraryFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.search.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.example.playlistmaker.library.ui.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.settings.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.playlistmaker.player.ui.PlayerFragment"
        android:label="Player"
        tools:layout="@layout/fragment_player">
        <argument
            android:name="track"
            app:argType="com.example.playlistmaker.search.domain.Track" />
    </fragment>

</navigation>
