<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".main.ui.MainActivity"
    android:background="@color/background_settings"
    android:theme="@style/Theme.PlaylistMaker"
    android:fitsSystemWindows="true"
    >

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        android:paddingStart="0dp"
        android:gravity="start|center_vertical"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:letterSpacing="0"
        android:lineSpacingMultiplier="1.0"
        android:lineSpacingExtra="0sp"
        android:text="@string/settings"
        android:backgroundTint="@color/button_background"
        android:textColor="@color/button_text_color"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        style="@style/ButtonStyle"
        android:text="@string/night_theme"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingVertical="0dp"
        android:minHeight="61dp"
        android:background="@color/yp_white"
        android:stateListAnimator="@null"
        android:backgroundTint="@color/button_background"
        android:textColor="@color/button_text_color"
        android:fontFamily="@font/ys_display_medium"
        app:thumbTint="@color/yp_white"
        app:trackTint="@color/switch_track_color"/>

    <Button
        android:id="@+id/share_app_button"
        style="@style/ButtonStyle"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/button_background"
        android:stateListAnimator="@null"
        android:text="@string/share"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingVertical="0dp"
        android:minHeight="61dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/button_text_color"
        app:icon="@drawable/ic_share"
        app:iconGravity="end"
        app:iconTint="@color/yp_text_grey"
        app:iconSize="24dp"
        />

    <com.google.android.material.button.MaterialButton
        app:icon="@drawable/ic_support"
        app:iconGravity="end"
        app:iconTint="@color/yp_text_grey"
        android:stateListAnimator="@null"
        style="@style/ButtonStyle"
        android:id="@+id/contact_support_button"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:text="@string/support"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingVertical="0dp"
        android:minHeight="61dp"
        android:fontFamily="@font/ys_display_medium"
        android:backgroundTint="@color/button_background"
        android:textColor="@color/button_text_color"
        app:iconSize="24dp"
        />

    <Button
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="end"
        app:iconTint="@color/yp_text_grey"
        android:stateListAnimator="@null"
        style="@style/ButtonStyle"
        android:id="@+id/terms_of_service_button"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:text="@string/agreement"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingVertical="0dp"
        android:minHeight="61dp"
        android:fontFamily="@font/ys_display_medium"
        android:backgroundTint="@color/button_background"
        android:textColor="@color/button_text_color"
        app:iconSize="24dp"
        />

</LinearLayout>